test/should_not_compile/invalid-bound-name1.sml
val true as _ = 123;
print (Int.toString true);
